# SetListify

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DELIVERABLES.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/setlistify/: __init__.py  cache.py  cli.py  config.py  logging_config.py  matcher.py  models.py  setlistfm_client.py  spotify_client.py  utils.py
tests/: __init__.py  conftest.py  test_cache.py  test_integration.py  test_matcher.py  test_models.py  test_setlist_selection.py  test_spotify_client.py  test_utils.py
