[project]
name = "setlistify"
version = "0.1.0"
description = "Automated Spotify playlist management with setlist.fm concert setlists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "spotipy>=2.23.0",
    "requests>=2.31.0",
    "rapidfuzz>=3.6.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
setlistify = "setlistify.cli:app"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
